--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
         <meta name="keywords" content="GIMNASIO, ENTRENAR, MUSCULO, ADELGAZAR, PESAS, RUNNING, CARDIOVASCULAR, SALUD, FISICO, ALIMENTACION">          
         <title>Inicio - MediaFit</title>  
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;800;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="Css/estilos.css"> 
     </head> 
     <body>
         <div id="contenedor-total">
             <div id="contenido-pagina">
                 <header>
-                    <nav>
-                        <a href="index.html" class="logo"><img src="Imagenes/MEDIA-FIT-LOGO-baja-verde.png" alt="Foto del logo"></a>                
-                        
+                    <input type="checkbox" id="btn-menu">
+                    <label for="btn-menu"><img src="Imagenes/icono-menu.png" alt="">
+                    </label>
+                    <nav>                        
+                        <a href="index.html" class="logo"><img src="Imagenes/MEDIA-FIT-LOGO-baja-verde.png" alt="Foto del logo"></a>
                         <div id="navegador">
                             <div><a href="index.html" class="paginaActiva">Inicio</a></div>
                             <div><a href="Paginas/staff.html">Staff</a></div>
@@ -31,11 +34,11 @@
                             <p class="intro__parrafo">No te dejes vencer por la rutina, vení a entrenar con nosotros y consegui los resultados que buscas!</p>
                             <h3 class="intro__inscribirme"><a href="Paginas/planes.html">Quiero inscribirme!</a></h3>
                             <h4><a href="Paginas/staff.html">Conocer más sobre MediaFit</a></h4>
-                    </section>
+                    </section>          
                 </main>
             </div>      
             <footer>
-                <div class="footer__menu">
+                <div class="footer__menu hidden">
                     <h5>Navegación</h5>
                     <div class="footer__link"> 
                         <a href="index.html">Inicio</a>
@@ -45,7 +48,7 @@
                         <a href="Paginas/contacto.html"> Contacto</a>
                     </div>
                 </div>
-                <div class=footer__menu>
+                <div class="footer__menu hidden">
                     <h5>Redes</h5>
                     <div class="footer__link">   
                         <a href="https://www.facebook.com/">Facebook</a>
@@ -53,8 +56,17 @@
                         <a href="https://www.youtube.com/">Youtube</a>
                     </div>
                 </div>
-                <p class="copyright">©MediaFit. Todos los derechos reservados.</p>
+                <div class="footer__menu">
+                <div>
+                    <a href="index.html" class="logo"><img src="Imagenes/MEDIA-FIT-LOGO-baja-verde-small.png" alt="Foto del logo"></a>
+                    <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+                    <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
+                    <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+                    <p class="copyright">©MediaFit. Todos los derechos reservados.</p>
+                </div>
+                </div>
             </footer>
         </div>
+        <!--<script src="js/app.js"></script> -->
     </body>
 </html>
